[ iOS iPhone 12 ] fast/hidpi & fast/layers/hidpi tests are flaky text/image failing https://bugs.webkit.org/show_bug.cgi?id=232384 <rdar://problem/84714121>

Reviewed by Wenson Hsieh.

Tools:

Rotation (initiated by UiController::simulateRotationLikeSafari) may confuse UIScreen and produce unexpected scale value.
This patch ensures that we set the scale value back to the default (2) in between test runs.
(Currently we only set this value in TestController::platformInitialize/dumpRenderTree.)

* DumpRenderTree/mac/DumpRenderTree.mm:
(resetWebViewToConsistentState):
* WebKitTestRunner/ios/TestControllerIOS.mm:
(WTR::TestController::platformResetStateToConsistentValues):

LayoutTests:

* platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/249533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292749 268f45cc-cd09-0410-ab3c-d52691b4dbfc