Tools/WebKitTestRunner/ios/TestControllerIOS.mm
@@ -158,6 +158,7 @@ bool TestController::platformResetStateToConsistentValues(const TestOptions& opt
     [pasteboardConsistencyEnforcer() clearPasteboard];
     [[UIApplication sharedApplication] _cancelAllTouches];
     [[UIDevice currentDevice] setOrientation:UIDeviceOrientationPortrait animated:NO];
+    [[UIScreen mainScreen] _setScale:2.0];
 
     // Ensures that only the UCB is on-screen when showing the keyboard, if the hardware keyboard is attached.
     TIPreferencesController *textInputPreferences = [getTIPreferencesControllerClass() sharedPreferencesController];
